--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     },
     "dependencies": {
         "axios": "^1.3.4",
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.2",
         "form-data": "^4.0.0",
         "formidable": "^2.1.1",
         "http-status-codes": "^2.2.0",
+        "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.1.0",
         "mongoose": "^6.10.0",
         "multer": "^1.4.5-lts.1",
