--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
-MONGO_URI = "mongodb://localhost:27017/post-authentication-user-data"
+MONGO_URI = "mongodb://127.0.0.1:27017/post-authentication-user-data"
+SECRET = "thisismyloginwebtoken";
