--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.3.4",
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.2",
+        "cookie": "^0.5.0",
+        "form-data": "^4.0.0",
+        "formidable": "^2.1.1",
+        "http-status-codes": "^2.2.0",
+        "jose": "^4.13.1",
+        "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.1.0",
         "mongoose": "^6.10.0",
-        "next": "12.3.0",
+        "multer": "^1.4.5-lts.1",
+        "next": "^13.2.4",
+        "next-connect": "^0.13.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "validator": "^13.9.0"
