--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "http-status-codes": "^2.2.0",
         "jose": "^4.13.1",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
         "mongodb": "^5.1.0",
         "mongoose": "^6.10.0",
         "multer": "^1.4.5-lts.1",
