--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cookie": "^0.5.0",
         "form-data": "^4.0.0",
         "formidable": "^2.1.1",
+        "formik": "^2.2.9",
         "http-status-codes": "^2.2.0",
         "jose": "^4.13.1",
         "jsonwebtoken": "^9.0.0",
@@ -23,6 +24,7 @@
         "mongoose": "^6.10.0",
         "multer": "^1.4.5-lts.1",
         "next": "^13.2.4",
+        "next-auth": "^4.22.1",
         "next-connect": "^0.13.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
